# indoor-semantic-segmentation

./: .gitignore  LitClassification_ft_schedule.yaml  README.md  infer_paper.py  notebook.ipynb  nyuv2-lyftudacity.ipynb  pyproject.toml  test.py  test_data.py  train.py  train_classification.py  train_multitask.ipynb  train_multitask.py  train_multitask_classification.py  train_multitask_segmentation.py  train_multitask_with_obj.py  train_segmentation.py  train_segmentation_classification.py  unet_tutorial.py  viusalize_preds.ipynb  viusalize_preds.py
EDA/: classification_EDA.ipynb  notebook.ipynb  segmentation_EDA.ipynb
converted_logs/: classification_from_segmentation-lr-3.549e-04.csv  classification_only-lr-3.336e-05.csv  fine_tuning-lr_init-1.63e-04-lr_backbone-2.88e-07.csv  multitask_simple-lr-9.160e-05.csv  segmentation_only-lr-1.268e-04.csv  serial_classif.csv
docs/: Untitled Diagram.drawio  pliczek.pptx
docs/mid-report/: report.tex
docs/obronav2/: presentation.tex
docs/presentation/: presentation.bib  presentation.tex
docs/sdi-big/: presentation.tex
docs/sdi-mock/: fake_data.ipynb  presentation.tex
docs/thesis/: bibliografia.bib  main.app  (+12 more)
old_training/: train_manual.py  train_multitask.py  train_multitask_segmentation.py
presentation/: presentation.tex
src/: classification_lit.py  classification_models.py  constants.py  dataset.py  metrics.py  multitask_datamod.py  multitask_lit.py  multitask_model.py  multitaskt_datamod.py  segmentation_lit.py  transforms.py
utils/: logs_vis.ipynb  logs_visualizer.py  preprocess_logs.ipynb  timer.py  vis.py
(+28 files in other folders)
