[tool.poetry]
name = "p-inz"
version = "0.1.0"
description = ""
authors = ["Piotr Hondra <piotr.hondra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
torchvision = "^0.12.0"
numpy = "^1.22.3"
jupyter = "^1.0.0"
ipykernel = "^6.13.0"
notebook = "^6.4.11"
matplotlib = "^3.5.2"
tensorboard = "^2.9.0"
h5py = "^3.6.0"
segmentation-models-pytorch = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
